# Octo-Protocol

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  clippy.toml  deny.toml  docker-compose.yml  justfile  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
crates/api/: Cargo.toml  README.md
crates/api/src/: audit.rs  auth.rs  error.rs  horizon.rs  lib.rs  sponsor_validation.rs  state.rs
crates/api/src/routes/: addresses.rs  apikeys.rs  audit.rs  mod.rs  sponsor.rs  sponsorship.rs  wallets.rs  webhooks.rs  withdrawals.rs
crates/api/tests/: api_tests.rs  auth_tests.rs  horizon_live_tests.rs  horizon_resilience_tests.rs  session_revocation_tests.rs  sponsor_e2e_tests.rs  sponsor_webhook_tests.rs
crates/crypto/: Cargo.toml  README.md
crates/crypto/src/: lib.rs
crates/ingest/: Cargo.toml  README.md
crates/ingest/src/: horizon.rs  lib.rs
crates/ingest/tests/: process_tests.rs  resume_replay_tests.rs  supervisor_network_isolation_tests.rs  webhook_e2e_tests.rs
crates/resilience/: Cargo.toml
crates/resilience/src/: lib.rs
crates/store/: Cargo.toml  README.md
crates/store/migrations/: 0003_users.sql  0004_wallet_owner.sql  0005_api_keys.sql  0006_audit_logs.sql  0007_gas_sponsorship.sql  0007_gas_sponsorship_configs.sql  0007_sponsored_transactions.sql  0008_token_denylist.sql
crates/store/src/: error.rs  lib.rs  models.rs
crates/store/tests/: store_tests.rs
crates/wallet-core/: Cargo.toml  README.md
crates/wallet-core/src/: error.rs  fee_bump.rs  lib.rs  signer.rs
crates/webhooks/: Cargo.toml  README.md
crates/webhooks/src/: lib.rs  sign.rs
docs/: api.md  architecture.md  deposit-model.md
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/dashboard/audit/: page.tsx
frontend/src/app/dashboard/wallets/[id]/api/: page.tsx
frontend/src/app/dashboard/wallets/[id]/sponsorship/: page.tsx
frontend/src/app/dashboard/wallets/new/: page.tsx
frontend/src/app/docs/: layout.tsx  page.tsx
frontend/src/app/docs/api/: page.tsx
frontend/src/app/docs/api/addresses/: page.tsx
frontend/src/app/docs/api/authentication/: page.tsx
frontend/src/app/docs/api/reads/: page.tsx
frontend/src/app/docs/api/withdrawals/: page.tsx
frontend/src/app/docs/gas-sponsorship/: page.tsx
frontend/src/app/docs/getting-started/: page.tsx
frontend/src/app/docs/security/: page.tsx
frontend/src/app/docs/webhooks/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/components/: Logo.tsx
frontend/src/components/auth/: AuthForm.tsx  AuthShell.tsx
frontend/src/components/dashboard/: DashboardShell.tsx  Sidebar.tsx  SponsoredTransactionsTable.tsx  WalletSidebar.tsx
frontend/src/components/docs/: DocsSidebar.tsx  DocsUI.tsx
frontend/src/components/landing/: CTA.tsx  Developers.tsx  Features.tsx  Footer.tsx  Hero.tsx  Navbar.tsx  UseCases.tsx
frontend/src/lib/: api.ts  audit.ts  auth.ts  sponsorship.ts  useAuth.ts  wallets.ts
reference/: README.md  docs.md
