[workspace]
resolver = "2"
members = [
    "crates/crypto",
    "crates/wallet-core",
    "crates/store",
    "crates/webhooks",
    "crates/ingest",
    "crates/api",
    "bin/server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.84"
license = "MIT"
repository = "https://github.com/octo/octo"
authors = ["octo contributors"]

# Shared, version-pinned dependencies (locked in Step 1 of the plan).
# Crates opt in with `foo = { workspace = true }`.
[workspace.dependencies]
# --- Stellar / crypto ---
stellar-strkey = "0.0.16"
stellar-base = "0.7.0"
slip10_ed25519 = "0.1.3"
tiny-bip39 = "2.0.0"
ed25519-dalek = "2.2.0"
aes-gcm = "0.10.3"
zeroize = { version = "1.8.2", features = ["derive"] }
hmac = "0.12.1"
hkdf = "0.12.4"
sha2 = "0.10.9"
hex = "0.4.3"
base64 = "0.22"
argon2 = "0.5"
# Note: the MSRV-aware resolver (.cargo/config.toml: incompatible-rust-versions = "fallback")
# keeps the whole tree on Rust-1.84-compatible versions, so no manual transitive pins are needed.

# --- async runtime / web ---
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

# --- persistence ---
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "uuid", "chrono", "json", "migrate"] }

# --- serde / utility ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"

# --- internal crates ---
octo-crypto = { path = "crates/crypto" }
octo-wallet-core = { path = "crates/wallet-core" }
octo-store = { path = "crates/store" }
octo-webhooks = { path = "crates/webhooks" }
octo-ingest = { path = "crates/ingest" }
octo-api = { path = "crates/api" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
