[package]
name = "octo-api"
description = "axum REST API: wallets, addresses, withdrawals, transactions, webhooks."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
octo-crypto.workspace = true
octo-wallet-core.workspace = true
octo-store.workspace = true
octo-webhooks.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
base64.workspace = true
zeroize.workspace = true
stellar-base.workspace = true
stellar-strkey.workspace = true
argon2.workspace = true
rand.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true
stellar-base.workspace = true
stellar-strkey.workspace = true

[dev-dependencies]
tokio.workspace = true
tower.workspace = true
sqlx.workspace = true
dotenvy = "0.15"
