[package]
name = "blockme-ingest"
description = "Horizon payment streaming with a durable cursor, attributing deposits by muxed id or memo id."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
blockme-store.workspace = true
blockme-webhooks.workspace = true
reqwest.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
