[package]
name = "octo-ingest"
description = "Horizon payment streaming with a durable cursor, attributing deposits by muxed id or memo id."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
octo-store.workspace = true
octo-wallet-core.workspace = true
octo-webhooks.workspace = true
reqwest.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
dotenvy = "0.15"
axum.workspace = true
octo-webhooks.workspace = true
