[package]
name = "octo-store"
description = "Postgres models and migrations (sqlx) for wallets, addresses, transactions, withdrawals, webhooks, and the ingest cursor."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true
dotenvy = "0.15"
sqlx.workspace = true
